--- a/Parcial 1/Practicas/zoologico/zoologico/zoologico.vcxproj.filters
+++ b/Parcial 1/Practicas/zoologico/zoologico/zoologico.vcxproj.filters
@@ -18,8 +18,10 @@
     <ClCompile Include="Source.cpp">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
-    <ClCompile Include="Source1.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Class.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
