--- a/Parcial 2/Practicas/Nodos/Nodos/Nodos.vcxproj
+++ b/Parcial 2/Practicas/Nodos/Nodos/Nodos.vcxproj
@@ -115,14 +115,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cola.cpp" />
     <ClCompile Include="listaEnl.cpp" />
+    <ClCompile Include="Nodo.cpp" />
+    <ClCompile Include="NodoDoble.cpp" />
     <ClCompile Include="Pila.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Lirberias.h" />
+    <ClInclude Include="Cola.h" />
+    <ClInclude Include="Librerias.h" />
     <ClInclude Include="listaEnl.h" />
+    <ClInclude Include="Nodo.h" />
+    <ClInclude Include="NodoDoble.h" />
     <ClInclude Include="Pila.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
