--- a/Parcial 3/Practicas/Arboles/Arboles/Arboles.vcxproj.filters
+++ b/Parcial 3/Practicas/Arboles/Arboles/Arboles.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="User.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Arbol.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="User.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Arbol.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
