--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,15 @@ Parcial 3/Practicas/Arboles/.vs/Arboles/v15/.suo
 *.pdb
 *.ilk
 *.pdb
+Parcial 3/Practicas/Arboles/.vs/Arboles/v15/.suo
+*.db
+Parcial 3/Practicas/Arboles/.vs/Arboles/v15/.suo
+*.vcxproj
+*.filters
+*.log
+*.lastbuildstate
+*.tlog
+*.tlog
+*.tlog
+*.idb
+*.pdb
