--- a/Parcial 3/Practicas/Arboles/Arboles/Arboles.vcxproj
+++ b/Parcial 3/Practicas/Arboles/Arboles/Arboles.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="Bin.cpp" />
     <ClCompile Include="AVL.cpp" />
+    <ClCompile Include="BinNode.cpp" />
     <ClCompile Include="Persona.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="AVLNode.cpp" />
@@ -125,6 +126,7 @@
     <ClInclude Include="Arbol.h" />
     <ClInclude Include="Bin.h" />
     <ClInclude Include="AVL.h" />
+    <ClInclude Include="BinNode.h" />
     <ClInclude Include="Nodes.h" />
     <ClInclude Include="Persona.h" />
     <ClInclude Include="AVLNode.h" />
