--- a/Parcial 3/Practicas/Arboles/Arboles/Arboles.vcxproj.filters
+++ b/Parcial 3/Practicas/Arboles/Arboles/Arboles.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="BinNode.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Book.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Persona.h">
@@ -54,6 +57,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="BinNode.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Book.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
